EVERYTHING WORKING JUST PLAY WITH CSS NOW

--- a/ninisani/schedule/schedule.html
+++ b/ninisani/schedule/schedule.html
@@ -2,64 +2,112 @@
 <html lang="en" dir="ltr">
   <head>
     <title>
-    proposal
+    Schedules
     </title>
     <meta charset="utf-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./stylesheetsch.css">
-
+<script src="script.js"> </script>
   </head>
 
   <body>
 
     <div class="header">
+      <img src="../assets/image/Ninisanni_logo.png" onclick="window.location.href='../home.html';" class="logo" alt="logo">
       <ul>
-        <li>Home</li>
-        <li>Workers</li>
-        <li>Schedule</li>
-        <li>Application</li>
-        <li>About</li>
+        <li><a href="../home.html">Home</a></li>
+        <li><a href="../worker/workers.html">Workers</a></li>
+        <li><a href="../schedule/schedule.html">Schedule</a></li>
+
+        <li><a href="../about/about.html">About</a></li>
       </ul>
     </div>
 
-    <div class="times">
-      PST
-    </div>
-    <div class="times">
+    <div class="times" id="top-element">
+
+      <span class="pst" id="pst">
+    PST
+  </span>
+    <span class="est"id="est">
       EST
-    </div>
-    <div class="times">
-      GMT
-    </div>
-    <div class="times">
-    JST
-    </div>
+    </span>
+    <span class="utc"id="utc">
+      UTC
+    </span>
+    <span  class="jst"id="jst">
+      JST
+    </span>
+</div>
 
     <div class="gen">
       Lazulight
     </div>
-    
-    <!-- twitter posts -->
+    <!-- Elira -->
+    <div class="twitter">
+<blockquote class="twitter-tweet" data-dnt="true" data-theme="dark"><p lang="en" dir="ltr">『Weekly Schedule &amp; Hashtags』<br>November 28th - December 4th<br><br>general - <a href="https://twitter.com/hashtag/EliraPendora?src=hash&amp;ref_src=twsrc%5Etfw">#EliraPendora</a><br>live tag - <a href="https://twitter.com/hashtag/PenCast?src=hash&amp;ref_src=twsrc%5Etfw">#PenCast</a><br>art tag - <a href="https://twitter.com/hashtag/%E7%B5%B5%E3%83%AA%E3%83%BC%E3%83%A9?src=hash&amp;ref_src=twsrc%5Etfw">#絵リーラ</a> <a href="https://twitter.com/hashtag/pendorART?src=hash&amp;ref_src=twsrc%5Etfw">#pendorART</a><br>nsfw tag - <a href="https://twitter.com/hashtag/elilust?src=hash&amp;ref_src=twsrc%5Etfw">#elilust</a><br>memes - <a href="https://twitter.com/hashtag/E1337RA?src=hash&amp;ref_src=twsrc%5Etfw">#E1337RA</a> <br><br>artwork by @/mech_fuse<br>I&#39;ll also be on Rosemi Night Live on the 30th💖 <a href="https://t.co/IBfv1giJbI">pic.twitter.com/IBfv1giJbI</a></p>&mdash; Elira Pendora 🌤️ NIJISANJI EN (@EliraPendora) <a href="https://twitter.com/EliraPendora/status/1465487046638768130?ref_src=twsrc%5Etfw">November 30, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
+
+    <!-- Pomu -->
+
+
+<blockquote class="twitter-tweet" data-dnt="true" data-theme="dark"><p lang="en" dir="ltr">11/28 - 12/4 SCHEDULE🧚🍂<br><br>Holy moly it&#39;s already the end of the year😳<br><br>STREAMS <a href="https://twitter.com/hashtag/PomuLive?src=hash&amp;ref_src=twsrc%5Etfw">#PomuLive</a><br>FANART <a href="https://twitter.com/hashtag/PomuPaint?src=hash&amp;ref_src=twsrc%5Etfw">#PomuPaint</a> <br>R-🔞 <a href="https://twitter.com/hashtag/PomuHub?src=hash&amp;ref_src=twsrc%5Etfw">#PomuHub</a><br>MEMES <a href="https://twitter.com/hashtag/bigppmemes?src=hash&amp;ref_src=twsrc%5Etfw">#bigppmemes</a> <a href="https://twitter.com/hashtag/LazuLight?src=hash&amp;ref_src=twsrc%5Etfw">#LazuLight</a> <a href="https://twitter.com/hashtag/NIJISANJI_EN?src=hash&amp;ref_src=twsrc%5Etfw">#NIJISANJI_EN</a> <a href="https://twitter.com/hashtag/PomuRainpuff?src=hash&amp;ref_src=twsrc%5Etfw">#PomuRainpuff</a> <a href="https://t.co/CJMwHQa5Fk">pic.twitter.com/CJMwHQa5Fk</a></p>&mdash; Pomu Rainpuff🧚🍂NIJISANJI EN (@PomuRainpuff) <a href="https://twitter.com/PomuRainpuff/status/1465432266990145543?ref_src=twsrc%5Etfw">November 29, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<!-- finana -->
+
+<blockquote class="twitter-tweet" data-dnt="true" data-theme="dark"><p lang="en" dir="ltr">【Schedule/Tags】<br>・GENERAL: <a href="https://twitter.com/hashtag/FinanaRyugu?src=hash&amp;ref_src=twsrc%5Etfw">#FinanaRyugu</a> / <a href="https://twitter.com/hashtag/%E3%83%95%E3%82%A3%E3%83%8A%E3%83%BC%E3%83%8A%E7%AB%9C%E5%AE%AE?src=hash&amp;ref_src=twsrc%5Etfw">#フィナーナ竜宮</a><br>・LIVE: <a href="https://twitter.com/hashtag/FinanaLive?src=hash&amp;ref_src=twsrc%5Etfw">#FinanaLive</a><br>・SFW ART: <a href="https://twitter.com/hashtag/Finanart?src=hash&amp;ref_src=twsrc%5Etfw">#Finanart</a> / R-🔞: <a href="https://twitter.com/hashtag/Ryugasm?src=hash&amp;ref_src=twsrc%5Etfw">#Ryugasm</a><br>・THUMBNAIL/ASSETS: <a href="https://twitter.com/hashtag/Ryugraphics?src=hash&amp;ref_src=twsrc%5Etfw">#Ryugraphics</a><br>・FAN NAME: <a href="https://twitter.com/hashtag/Ryuguards?src=hash&amp;ref_src=twsrc%5Etfw">#Ryuguards</a><br>・MEMES: <a href="https://twitter.com/hashtag/Finameme?src=hash&amp;ref_src=twsrc%5Etfw">#Finameme</a><br>・GROUP: <a href="https://twitter.com/hashtag/LazuLight?src=hash&amp;ref_src=twsrc%5Etfw">#LazuLight</a> <a href="https://t.co/xFXRGkfh7f">pic.twitter.com/xFXRGkfh7f</a></p>&mdash; Finana Ryugu 🐠 NIJISANJI EN (@FinanaRyugu) <a href="https://twitter.com/FinanaRyugu/status/1464830942044848142?ref_src=twsrc%5Etfw">November 28, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+</div>
+</div>
     <div class="gen">
       Obsydia
+    </div>
+
+    <div class="twitter">
+<!-- Selen -->
+<blockquote class="twitter-tweet" data-dnt="true" data-theme="dark"><p lang="en" dir="ltr">BIRTHDAY HASHTAG: <a href="https://twitter.com/hashtag/SelenBday2021?src=hash&amp;ref_src=twsrc%5Etfw">#SelenBday2021</a><br><br>「Weekly Schedule &amp; Tags」<br>NOVEMBER 28th - DECEMBER 4th<br>GENERAL: <a href="https://twitter.com/hashtag/SelenTatsuki?src=hash&amp;ref_src=twsrc%5Etfw">#SelenTatsuki</a><br>LIVE: <a href="https://twitter.com/hashtag/TatsuTalk?src=hash&amp;ref_src=twsrc%5Etfw">#TatsuTalk</a><br>ART: <a href="https://twitter.com/hashtag/Artsuki?src=hash&amp;ref_src=twsrc%5Etfw">#Artsuki</a> / NSFW: <a href="https://twitter.com/hashtag/Lewdsuki?src=hash&amp;ref_src=twsrc%5Etfw">#Lewdsuki</a><br>FAN NAME: Dragoons <a href="https://twitter.com/hashtag/Drawgoons?src=hash&amp;ref_src=twsrc%5Etfw">#Drawgoons</a><br>MEMES: <a href="https://twitter.com/hashtag/Tatsulaugh?src=hash&amp;ref_src=twsrc%5Etfw">#Tatsulaugh</a><br>MUSIC SUGGESTIONS: <a href="https://twitter.com/hashtag/TatsuTunes?src=hash&amp;ref_src=twsrc%5Etfw">#TatsuTunes</a> <a href="https://t.co/EHl4W9WijW">pic.twitter.com/EHl4W9WijW</a></p>&mdash; Selen Tatsuki 🏆 NIJISANJI EN (@Selen_Tatsuki) <a href="https://twitter.com/Selen_Tatsuki/status/1464935392289837058?ref_src=twsrc%5Etfw">November 28, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<!-- Rosemi_Lovelock -->
+<blockquote class="twitter-tweet" data-dnt="true" data-theme="dark"><p lang="en" dir="ltr">【NOVEMBER 29 - DEC 4 SCHEDULE】<br><br>₊ Art🎨: <a href="https://twitter.com/hashtag/GalleryOfRoses?src=hash&amp;ref_src=twsrc%5Etfw">#GalleryOfRoses</a><br>₊ Livestream tag🎥: <a href="https://twitter.com/hashtag/LiveStem?src=hash&amp;ref_src=twsrc%5Etfw">#LiveStem</a><br>₊ Meme Tag✨: <a href="https://twitter.com/hashtag/Rosememe?src=hash&amp;ref_src=twsrc%5Etfw">#Rosememe</a><br>₊ Channel🌹: <a href="https://t.co/e32E2jncKa">https://t.co/e32E2jncKa</a> <a href="https://t.co/dhqDKwyJOe">pic.twitter.com/dhqDKwyJOe</a></p>&mdash; Rosemi Lovelock🌹NIJISANJI EN (@Rosemi_Lovelock) <a href="https://twitter.com/Rosemi_Lovelock/status/1465395941943427083?ref_src=twsrc%5Etfw">November 29, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<!-- Petra -->
+<blockquote class="twitter-tweet" data-dnt="true" data-theme="dark"><p lang="ja" dir="ltr">𝗦𝗖𝗛𝗘𝗗𝗨𝗟𝗘 𝗔𝗡𝗗 𝗧𝗔𝗚𝗦｜𝗡𝗢𝗩 𝟮𝟴 - 𝗗𝗘𝗖 𝟬𝟰<br> (take 2) IT&#39;S MY BIRTHDAY WEEK!! bday celebration details will be posted soon🧡🎉<br><br>general - <a href="https://twitter.com/hashtag/PetraGurin?src=hash&amp;ref_src=twsrc%5Etfw">#PetraGurin</a><br>fan art - <a href="https://twitter.com/hashtag/PetraArt?src=hash&amp;ref_src=twsrc%5Etfw">#PetraArt</a><br>live - <a href="https://twitter.com/hashtag/PetraOnAir?src=hash&amp;ref_src=twsrc%5Etfw">#PetraOnAir</a><br>memes - <a href="https://twitter.com/hashtag/PetraMeme?src=hash&amp;ref_src=twsrc%5Etfw">#PetraMeme</a><br>fan name - Pentomo (ペン友) <a href="https://t.co/Zx8TQ5IK0t">pic.twitter.com/Zx8TQ5IK0t</a></p>&mdash; Petra Gurin 🐧❄️ NIJISANJI EN (@Petra_Gurin) <a href="https://twitter.com/Petra_Gurin/status/1464977241998168064?ref_src=twsrc%5Etfw">November 28, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+
+
+
     </div>
 
 
     <div class="gen">
       Ethyria
     </div>
-
+<div  class="twitter">
+<!-- Enna -->
+<blockquote class="twitter-tweet" data-dnt="true" data-theme="dark"><p lang="en" dir="ltr">☕️ Schedule: Nov 29th - Dec 05th ☕️<br>This week is very special because I&#39;ll be collabing with one of my oshis !!😳asdfghjkl;;;<br><br>General: <a href="https://twitter.com/hashtag/EnnaAlouette?src=hash&amp;ref_src=twsrc%5Etfw">#EnnaAlouette</a><br>Live tag: <a href="https://twitter.com/hashtag/EnnaLively?src=hash&amp;ref_src=twsrc%5Etfw">#EnnaLively</a><br>Art: <a href="https://twitter.com/hashtag/%E3%82%A8%E3%83%8A%E3%83%BC%E3%82%A2%E3%83%BC%E3%83%88?src=hash&amp;ref_src=twsrc%5Etfw">#エナーアート</a> <a href="https://twitter.com/hashtag/Palouette?src=hash&amp;ref_src=twsrc%5Etfw">#Palouette</a><br>NSFW: <a href="https://twitter.com/hashtag/Alouwet?src=hash&amp;ref_src=twsrc%5Etfw">#Alouwet</a><br>Memes: <a href="https://twitter.com/hashtag/EnnTheyCry?src=hash&amp;ref_src=twsrc%5Etfw">#EnnTheyCry</a><br>Fan name: <a href="https://twitter.com/hashtag/Aloupeeps?src=hash&amp;ref_src=twsrc%5Etfw">#Aloupeeps</a><br>Cooking: <a href="https://twitter.com/hashtag/Boennappetit?src=hash&amp;ref_src=twsrc%5Etfw">#Boennappetit</a> <a href="https://t.co/DtoBKs4IUE">pic.twitter.com/DtoBKs4IUE</a></p>&mdash; Enna Alouette 🕊️🎐 NIJISANJI EN (@EnnaAlouette) <a href="https://twitter.com/EnnaAlouette/status/1465437001394659334?ref_src=twsrc%5Etfw">November 29, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<!-- Millie -->
+<blockquote class="twitter-tweet" data-dnt="true" data-theme="dark"><p lang="en" dir="ltr">🪄 Weekly Schedule 11/28~12/04🪄<br><br>I&#39;ll be having 3 days off this week to celebrate Petra and Selen&#39;s birthday! <br>Also tons of fun collab with JP/ID/EN! 🥳<br><br>fan name - <a href="https://twitter.com/hashtag/FaMillie?src=hash&amp;ref_src=twsrc%5Etfw">#FaMillie</a> <br>live tag / Clippers - <a href="https://twitter.com/hashtag/Millieseconds?src=hash&amp;ref_src=twsrc%5Etfw">#Millieseconds</a><br>art tag - <a href="https://twitter.com/hashtag/DrawMillie?src=hash&amp;ref_src=twsrc%5Etfw">#DrawMillie</a><br>nsfw tag - <a href="https://twitter.com/hashtag/CreaMillie?src=hash&amp;ref_src=twsrc%5Etfw">#CreaMillie</a><br>memes - <a href="https://twitter.com/hashtag/Memillie?src=hash&amp;ref_src=twsrc%5Etfw">#Memillie</a> <a href="https://t.co/F9yOzKC7ZT">pic.twitter.com/F9yOzKC7ZT</a></p>&mdash; Millie Parfait 🪄 NIJISANJI EN (@MillieParfait) <a href="https://twitter.com/MillieParfait/status/1465469792740122626?ref_src=twsrc%5Etfw">November 29, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<!-- Nina -->
+<blockquote class="twitter-tweet" data-dnt="true" data-theme="dark"><p lang="en" dir="ltr">I&#39;m switching my schedules to a Monday - Sunday format :) <br><br>WE GOT 2 BIRTHDAYS THIS WEEK! woo~<br><br>Gen <a href="https://twitter.com/hashtag/NinaKosaka?src=hash&amp;ref_src=twsrc%5Etfw">#NinaKosaka</a><br>Live <a href="https://twitter.com/hashtag/KosaCast?src=hash&amp;ref_src=twsrc%5Etfw">#KosaCast</a> <br>Art <a href="https://twitter.com/hashtag/DrawKosaka?src=hash&amp;ref_src=twsrc%5Etfw">#DrawKosaka</a> NSFW <a href="https://twitter.com/hashtag/KosaLust?src=hash&amp;ref_src=twsrc%5Etfw">#KosaLust</a><br>Memes <a href="https://twitter.com/hashtag/KosaKusa?src=hash&amp;ref_src=twsrc%5Etfw">#KosaKusa</a><br>Clips <a href="https://twitter.com/hashtag/KosaClips?src=hash&amp;ref_src=twsrc%5Etfw">#KosaClips</a><br>Thumbnails <a href="https://twitter.com/hashtag/KosaFridge?src=hash&amp;ref_src=twsrc%5Etfw">#KosaFridge</a> <br>RU <a href="https://twitter.com/hashtag/%D0%9D%D0%B8%D0%BD%D0%B0%D0%9D%D0%B0%D0%A0%D1%83%D1%81%D1%81%D0%BA%D0%BE%D0%BC?src=hash&amp;ref_src=twsrc%5Etfw">#НинаНаРусском</a> <br>FR <a href="https://twitter.com/hashtag/NinaKosakaFR?src=hash&amp;ref_src=twsrc%5Etfw">#NinaKosakaFR</a><br>Fan Name : HONEYS! <a href="https://t.co/uzHtPagZKz">pic.twitter.com/uzHtPagZKz</a></p>&mdash; Nina Kosaka 🎰 NIJISANJI EN (@NinaKosaka) <a href="https://twitter.com/NinaKosaka/status/1465035023581683718?ref_src=twsrc%5Etfw">November 28, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<!-- Reimu -->
+<blockquote class="twitter-tweet" data-dnt="true" data-theme="dark"><p lang="en" dir="ltr">【Weekly Schedule &amp; Tags】<br>November 28 - December 4<br><br>GENERAL: <a href="https://twitter.com/hashtag/ReimuEndou?src=hash&amp;ref_src=twsrc%5Etfw">#ReimuEndou</a><br>LIVE: <a href="https://twitter.com/hashtag/ReimuLive?src=hash&amp;ref_src=twsrc%5Etfw">#ReimuLive</a><br>ART: <a href="https://twitter.com/hashtag/Reimural?src=hash&amp;ref_src=twsrc%5Etfw">#Reimural</a> | <a href="https://twitter.com/hashtag/Endoujin?src=hash&amp;ref_src=twsrc%5Etfw">#Endoujin</a> / NSFW: <a href="https://twitter.com/hashtag/Reimundies?src=hash&amp;ref_src=twsrc%5Etfw">#Reimundies</a><br>FAN NAME: <a href="https://twitter.com/hashtag/Phantomos?src=hash&amp;ref_src=twsrc%5Etfw">#Phantomos</a><br>MEMES: <a href="https://twitter.com/hashtag/Reimuwu?src=hash&amp;ref_src=twsrc%5Etfw">#Reimuwu</a><br>MUSIC REQUEST: <a href="https://twitter.com/hashtag/Reimutatte?src=hash&amp;ref_src=twsrc%5Etfw">#Reimutatte</a> <a href="https://t.co/gLAZNXY448">pic.twitter.com/gLAZNXY448</a></p>&mdash; Reimu Endou 👻🎼 NIJISANJI EN (@ReimuEndou) <a href="https://twitter.com/ReimuEndou/status/1464768437679493122?ref_src=twsrc%5Etfw">November 28, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+</div>
 
 
 
   </body>
-  <div class="footer">
-  <div class="credit">
-  credits
-  </div>
-  <div class="disclamer">
-    disclamer
-  </div>
+  <div class="footer-container">
+    <div class="footer">
+        <div class="footer-text">
+        <h2>credits</h2>
+
+        Ninisanni Logo by <a href="https://www.reddit.com/r/Nijisanji/comments/qc2ygv/the_ninisanni_logo/" > u/BrokenTorpedo </a>
+        </div>
+        <div class="footer-text">
+          <h2>disclamer</h2>
+          This is not a real site.<br>
+           The talents exist the real company is called Nijisanji.<br>
+            This is just a parody site if Ninisanni was a company composed of the talents of the original company.
+          
+        </div>
+    </div>
   </div>
 
 
