--- a/ninisani/worker/Enna/page.html
+++ b/ninisani/worker/Enna/page.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <title>
-    Petra
+  Enna
     </title>
     <meta charset="utf-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,17 +27,16 @@
 
   <div class="name" id="top-element">
 
-    <h1>Petra Gurin</h1>
+    <h1>Enna Alouette</h1>
   </div>
   <div class="image-container" >
-  <img src="../../assets/image/full-body_Petra_Gurin.png" class="picture" alt="Elira">
+  <img src="../../assets/image/full-body_Enna_Alouette.png" class="picture" alt="Elira">
 </div>
 <!-- <div class="categories"> -->
   <h1 class="categories"> Description</h1>
 <!-- </div> -->
   <div class="description">
-    <p>
-    Petra works as a Chief Project Manager. She helps coordinate the events with the other members. She is also often seen in the administration section to help respond to a foreign client. Petra is also multilingual, she is often seen with other workers of the company from other branches.
+    <p>Enna is the Chief of the department in charge of all the deliveries that the company has to do. She is so efficient that the client has named her section "Nijisamazon" delivery service. If lucky, it is said that when Enna delivers to you, you can hear her sing. Her singing has been described as an angel from heaven. If not, you might fall upon a witch and an angel duet.
 </p>
 </div>
 
@@ -51,23 +50,23 @@
 <div class="button">
   <!-- socials -->
   <div class="twitter">
-  <a class="twitter-timeline" data-width="500" data-height="500" data-dnt="true" data-theme="dark" href="https://twitter.com/Petra_Gurin?ref_src=twsrc%5Etfw">Tweets by Petra_Gurin</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <a class="twitter-timeline" data-width="500" data-height="500" data-dnt="true" data-theme="dark" href="https://twitter.com/EnnaAlouette?ref_src=twsrc%5Etfw">Tweets by EnnaAlouette</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </div>
 
-  <img src="../../../../assets/finalproject/youtube.png" width="150px" alt="youtube" onclick="window.location.href='https://www.youtube.com/channel/UCgA2jKRkqpY_8eysPUs8sjw';" class="sociallogo">
+  <img src="../../../../assets/finalproject/youtube.png" width="150px" alt="youtube" onclick="window.location.href='https://www.youtube.com/channel/UCR6qhsLpn62WVxCBK1dkLow';" class="sociallogo">
 
 </div>
   <div class="categories">
     <h1>Highlight</h1>
   </div>
   <div class="video">
-    <iframe width="700" height="500" src="https://www.youtube.com/embed/RwaaslNXF30" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="700" height="500" src="https://www.youtube.com/embed/Lt0rZ1s6amM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div class="button-container">
-  <button type="button" onclick="window.location.href='../Rosemi/page.html';" class="btn">
+  <button type="button" onclick="window.location.href='../Petra/page.html';" class="btn">
     Last
   </button>
-  <button type="button" onclick="window.location.href='../Enna/page.html';" class="btn">
+  <button type="button" onclick="window.location.href='../Millie/page.html';" class="btn">
     Next
   </button>
 </div>
