--- a/ninisani/worker/Pomu/page.html
+++ b/ninisani/worker/Pomu/page.html
@@ -5,6 +5,9 @@
     Pomu
     </title>
     <meta charset="utf-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../stylesheetworker.css">
 
   </head>
@@ -12,60 +15,83 @@
   <body>
 
     <div class="header">
+      <img src="../../assets/image/Ninisanni_logo.png" onclick="window.location.href='../../home.html';" class="logo" alt="logo">
       <ul>
-        <li>Home</li>
-        <li>Workers</li>
-        <li>Schedule</li>
-        <li>Application</li>
-        <li>About</li>
+        <li><a href="../../home.html">Home</a></li>
+        <li><a href="../../worker/workers.html">Workers</a></li>
+        <li><a href="../../schedule/schedule.html">Schedule</a></li>
+        <li><a href="../../about/about.html">About</a></li>
       </ul>
     </div>
 
 
+  <div class="name" id="top-element">
+
+    <h1>Pomu Rainpuff</h1>
+  </div>
+  <div class="image-container" >
+  <img src="../../assets/image/full-body_Pomu_Rainpuff.png" class="picture" alt="Pomu">
+</div>
+<!-- <div class="categories"> -->
+  <h1 class="categories"> Description</h1>
+<!-- </div> -->
+  <div class="description">
+    <p>Pomu is the CMO, the Chief Marketing Officer.  Her unconventional methods are a little daunting at first but she pulls through with her investments. She has a special way of calling her marketing as "pomufication". Do not question it.
+      <br>I am <a href="https://impomu.com/"> Pomu</a><br>You are <a href="https://impomu.com/"> Pomu</a><br>We are<a href="https://impomu.com/"> Pomu</a>
+</p>
+</div>
+
+
+
+
   <div class="categories">
-    Pomu Rainpuff
-  </div>
-  <div class="picture">
-    *insert picture*
-  </div>
-  <div class="desription">
-    *insert description*
-  </div>
-  <div class="categories">
-    Socials
+    <h1>Socials</h1>
   </div>
 <!-- insert the clickable socials -->
 <div class="button">
   <!-- socials -->
+  <div class="twitter">
+<a class="twitter-timeline" data-width="500" data-height="500" data-dnt="true" data-theme="dark" href="https://twitter.com/PomuRainpuff?ref_src=twsrc%5Etfw">Tweets by PomuRainpuff</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  </div>
+
+  <img src="../../../../assets/finalproject/youtube.png" width="150px" alt="youtube" onclick="window.location.href='https://www.youtube.com/channel/UCP4nMSTdwU1KqYWu3UH5DHQ';" class="sociallogo">
+
 </div>
   <div class="categories">
-    highlight
+    <h1>Highlight</h1>
   </div>
   <div class="video">
-    *insert video*
+    <iframe width="700" height="500" src="https://www.youtube.com/embed/LFWaVWOD3Qc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
-  <div class="button">
+  <div class="button-container">
+  <button type="button" onclick="window.location.href='../Elira/page.html';" class="btn">
     Last
-  </div>
-  <div class="button">
+  </button>
+  <button type="button" onclick="window.location.href='../Finana/page.html';" class="btn">
     Next
-  </div>
-
-
-
-
+  </button>
+</div>
 
 
   </body>
 
-
-  <div class="footer">
-  <div class="credit">
-  credits
-  </div>
-  <div class="disclamer">
-    disclamer
-  </div>
+  <div class="footer-container">
+    <div class="footer">
+        <div class="footer-text">
+        <h2>credits</h2>
+        Images from Nijisanji <a href="https://www.nijisanji.jp/en/members">website</a>
+        Youtube Logo from <a href="https://www.saskatoonprogressclub.com/2021-celebrity-take-out-challenge-title-sponsor-ens-auto/free-youtube-logo-icon-2431-thumb/" >Saskatoonprogressclub</a>
+        <br>
+        Ninisanni Logo by <a href="https://www.reddit.com/r/Nijisanji/comments/qc2ygv/the_ninisanni_logo/" > u/BrokenTorpedo </a>
+        </div>
+        <div class="footer-text">
+          <h2>disclamer</h2>
+          This is not a real site.<br>
+           The talents exist the real company is called Nijisanji.<br>
+            This is just a parody site if Ninisanni was a company composed of the talents of the original company.
+          
+        </div>
+    </div>
   </div>
 
 
