--- a/ninisani/worker/workers.html
+++ b/ninisani/worker/workers.html
@@ -5,6 +5,9 @@
     work
     </title>
     <meta charset="utf-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./stylesheetworker.css">
 
   </head>
@@ -12,44 +15,65 @@
   <body>
 
     <div class="header">
-      <ul>
-        <li>Home</li>
-        <li>Workers</li>
-        <li>Schedule</li>
-        <li>Application</li>
-        <li>About</li>
-      </ul>
+      <img src="../assets/image/Ninisanni_logo.png" onclick="window.location.href='../home.html';" class="logo" alt="logo">
+        <ul>
+          <li><a href="../home.html">Home</a></li>
+          <li><a href="./workers.html">Workers</a></li>
+          <li><a href="../schedule/schedule.html">Schedule</a></li>
+          <li><a href="../about/about.html">About</a></li>
+        </ul>
+
     </div>
-    <div class="gen">
+
+
+    <div class="gen" id="top-element">
       Lazulight
 
     </div>
+    <div class="vtuber">
 
-    <!-- insert carousel here -->
+      <a href="./Elira/page.html" > <img src="../assets/image/Elira_Pendora.webp"class="worker"alt="Elira"> </a>
 
-    <div class="gen">
-    Obsydia
+      <a href="./Pomu/page.html" >  <img src="../assets/image/Pomu_Rainpuff.webp"class="worker" alt="Pomu"></a>
 
-    </div>
-
-    <!-- insert carousel here -->
-    <div class="gen">
-    Ethyria
+      <a href="./Finana/page.html" >  <img src="../assets/image/Finana_Ryugu.webp"class="worker" alt="Finana"></a>
 
     </div>
+    <div class="gen">
+      Obsydia
+    </div>
+    <div class="vtuber">
+      <a href="./Selen/page.html" ><img src="../assets/image/Selen_Tatsuki.webp"class="worker" alt="Selen"></a>
+      <a href="./Rosemi/page.html" >  <img src="../assets/image/Rosemi_Lovelock.webp"class="worker" alt="Rosemi"></a>
+      <a href="./Petra/page.html" >  <img src="../assets/image/Petra_Gurin.webp"class="worker" alt="Petra"></a>
+    </div>
+    <div class="gen">
+      Ethyria
+    </div>
+    <div class="vtuber">
+      <a href="./Enna/page.html" >  <img src="../assets/image/Enna_Alouette.webp"class="ethyria" alt="Enna"></a>
+      <a href="./Millie/page.html" > <img src="../assets/image/Millie_Parfait.webp"class="ethyria" alt="Millie"></a>
+      <a href="./Nina/page.html" > <img src="../assets/image/Nina_Kosaka.webp"class="ethyria" alt="Nina"></a>
+      <a href="./Reimu/page.html" > <img src="../assets/image/Reimu_Endou.webp"class="ethyria" alt="Reimu"></a>
+    </div>
 
-    <!-- insert carousel here -->
-<div class="footer">
-<div class="credit">
-credits
-</div>
-<div class="disclamer">
-  disclamer
-</div>
-</div>
   </body>
 
+  <div class="footer-container">
+    <div class="footer">
+        <div class="footer-text">
+        <h2>credits</h2>
+        Images from Nijisanji <a href="https://www.nijisanji.jp/en/members">website</a>
+        </div>
+        <div class="footer-text">
+          <h2>disclamer</h2>
+          This is not a real site.<br>
+           The talents exist the real company is called Nijisanji.<br>
+            This is just a parody site if Ninisanni was a company composed of the talents of the original company.
 
+        </div>
+    </div>
+  </div>
 
 
   </script>
