--- a/ninisani/worker/Rosemi/page.html
+++ b/ninisani/worker/Rosemi/page.html
@@ -5,6 +5,9 @@
     Rosemi
     </title>
     <meta charset="utf-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../stylesheetworker.css">
 
   </head>
@@ -12,60 +15,83 @@
   <body>
 
     <div class="header">
+      <img src="../../assets/image/Ninisanni_logo.png" onclick="window.location.href='../../home.html';" class="logo" alt="logo">
       <ul>
-        <li>Home</li>
-        <li>Workers</li>
-        <li>Schedule</li>
-        <li>Application</li>
-        <li>About</li>
+        <li><a href="../../home.html">Home</a></li>
+        <li><a href="../../worker/workers.html">Workers</a></li>
+        <li><a href="../../schedule/schedule.html">Schedule</a></li>
+        <li><a href="../../about/about.html">About</a></li>
       </ul>
     </div>
 
 
+  <div class="name" id="top-element">
+
+    <h1>Rosemi Lovelock</h1>
+  </div>
+  <div class="image-container" >
+  <img src="../../assets/image/full-body_Rosemi_Lovelock.png" class="picture" alt="Elira">
+</div>
+<!-- <div class="categories"> -->
+  <h1 class="categories"> Description</h1>
+<!-- </div> -->
+  <div class="description">
+    <p>Rosemi has risen to the position of COO recently. Her many talents allow her to be very versatile. Nickname as the "Great Rosemi-Sama" by all that meets her, her interactions with co-workers are priceless. Apparently, there are rumours from those that meet her that her smile and personality can give you diabetes.
+
+</p>
+</div>
+
+
+
+
   <div class="categories">
-    Rosemi Lovelock
-  </div>
-  <div class="picture">
-    *insert picture*
-  </div>
-  <div class="desription">
-    *insert description*
-  </div>
-  <div class="categories">
-    Socials
+    <h1>Socials</h1>
   </div>
 <!-- insert the clickable socials -->
 <div class="button">
   <!-- socials -->
+  <div class="twitter">
+<a class="twitter-timeline" data-width="500" data-height="500" data-dnt="true" data-theme="dark" href="https://twitter.com/Rosemi_Lovelock?ref_src=twsrc%5Etfw">Tweets by Rosemi_Lovelock</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  </div>
+
+  <img src="../../../../assets/finalproject/youtube.png" width="150px" alt="youtube" onclick="window.location.href='https://www.youtube.com/channel/UC4WvIIAo89_AzGUh1AZ6Dkg/featured';" class="sociallogo">
+
 </div>
   <div class="categories">
-    highlight
+    <h1>Highlight</h1>
   </div>
   <div class="video">
-    *insert video*
+    <iframe width="700" height="500" src="https://www.youtube.com/embed/e4312MUO4Fc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
-  <div class="button">
+  <div class="button-container">
+  <button type="button" onclick="window.location.href='../Selen/page.html';" class="btn">
     Last
-  </div>
-  <div class="button">
+  </button>
+  <button type="button" onclick="window.location.href='../Petra/page.html';" class="btn">
     Next
-  </div>
-
-
-
-
+  </button>
+</div>
 
 
   </body>
 
-
-  <div class="footer">
-  <div class="credit">
-  credits
-  </div>
-  <div class="disclamer">
-    disclamer
-  </div>
+  <div class="footer-container">
+    <div class="footer">
+        <div class="footer-text">
+        <h2>credits</h2>
+        Images from Nijisanji <a href="https://www.nijisanji.jp/en/members">website</a>
+        Youtube Logo from <a href="https://www.saskatoonprogressclub.com/2021-celebrity-take-out-challenge-title-sponsor-ens-auto/free-youtube-logo-icon-2431-thumb/" >Saskatoonprogressclub</a>
+        <br>
+        Ninisanni Logo by <a href="https://www.reddit.com/r/Nijisanji/comments/qc2ygv/the_ninisanni_logo/" > u/BrokenTorpedo </a>
+        </div>
+        <div class="footer-text">
+          <h2>disclamer</h2>
+          This is not a real site.<br>
+           The talents exist the real company is called Nijisanji.<br>
+            This is just a parody site if Ninisanni was a company composed of the talents of the original company.
+          
+        </div>
+    </div>
   </div>
 
 
