--- a/ninisani/worker/Selen/page.html
+++ b/ninisani/worker/Selen/page.html
@@ -2,70 +2,97 @@
 <html lang="en" dir="ltr">
   <head>
     <title>
-      Selen
+    Selen
     </title>
     <meta charset="utf-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../stylesheetworker.css">
+
 
   </head>
 
   <body>
-
+<img src="../../assets/image/Ninisanni_logo.png" onclick="window.location.href='../../home.html';" class="logo" alt="logo">
     <div class="header">
       <ul>
-        <li>Home</li>
-        <li>Workers</li>
-        <li>Schedule</li>
-        <li>Application</li>
-        <li>About</li>
+        <li><a href="../../home.html">Home</a></li>
+        <li><a href="../../worker/workers.html">Workers</a></li>
+        <li><a href="../../schedule/schedule.html">Schedule</a></li>
+        <li><a href="../../about/about.html">About</a></li>
       </ul>
     </div>
 
 
+  <div class="name" id="top-element">
+
+    <h1>Selen Tatsuki</h1>
+  </div>
+  <div class="image-container" >
+  <img src="../../assets/image/full-body_Selen_Tatsuki.png" class="picture" alt="Elira">
+</div>
+<!-- <div class="categories"> -->
+  <h1 class="categories"> Description</h1>
+<!-- </div> -->
+  <div class="description">
+    <p>Selen is our prized CEO. She is the face of the company and is the most often seen at events and meetings. She has been climbing rank to be at the top like a predator. She is competitive with her co-workers, but that is all in fun outside the company, which her colleagues have named "the gap".
+</p>
+</div>
+
+
+
+
   <div class="categories">
-    Selen Tatsuki
-  </div>
-  <div class="picture">
-    *insert picture*
-  </div>
-  <div class="desription">
-    *insert description*
-  </div>
-  <div class="categories">
-    Socials
+    <h1>Socials</h1>
   </div>
 <!-- insert the clickable socials -->
 <div class="button">
   <!-- socials -->
+  <div class="twitter">
+  <a class="twitter-timeline" data-width="500" data-height="500" data-dnt="true" data-theme="dark" href="https://twitter.com/Selen_Tatsuki?ref_src=twsrc%5Etfw">Tweets by Selen_Tatsuki</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+  </div>
+
+  <img src="../../../../assets/finalproject/youtube.png" width="150px" alt="youtube" onclick="window.location.href='https://www.youtube.com/channel/UCV1xUwfM2v2oBtT3JNvic3w';" class="sociallogo">
+
 </div>
   <div class="categories">
-    highlight
+    <h1>Highlight</h1>
   </div>
   <div class="video">
-    *insert video*
+    <iframe width="700" height="500" src="https://www.youtube.com/embed/Zey1EE5MfTU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
-  <div class="button">
+  <div class="button-container">
+  <button type="button" onclick="window.location.href='../Finana/page.html';" class="btn">
     Last
-  </div>
-  <div class="button">
+  </button>
+  <button type="button" onclick="window.location.href='../Rosemi/page.html';" class="btn">
     Next
-  </div>
-
-
-
-
+  </button>
+</div>
 
 
   </body>
 
+  <div class="footer-container">
+    <div class="footer">
+        <div class="footer-text">
+        <h2>credits</h2>
+        Images from Nijisanji <a href="https://www.nijisanji.jp/en/members">website</a>
+        Youtube Logo from <a href="https://www.saskatoonprogressclub.com/2021-celebrity-take-out-challenge-title-sponsor-ens-auto/free-youtube-logo-icon-2431-thumb/" >Saskatoonprogressclub</a>
 
-  <div class="footer">
-  <div class="credit">
-  credits
-  </div>
-  <div class="disclamer">
-    disclamer
-  </div>
+        Ninisanni Logo by <a href="https://www.reddit.com/r/Nijisanji/comments/qc2ygv/the_ninisanni_logo/" > u/BrokenTorpedo </a>
+
+        </div>
+        <div class="footer-text">
+          <h2>disclamer</h2>
+          This is not a real site.<br>
+           The talents exist the real company is called Nijisanji.<br>
+            This is just a parody site if Ninisanni was a company composed of the talents of the original company.
+          
+        </div>
+    </div>
   </div>
 
 
