fisnish all fix

--- a/ninisani/worker/Elira/page.html
+++ b/ninisani/worker/Elira/page.html
@@ -55,7 +55,7 @@
         data-dnt="true" data-theme="dark" href="https://twitter.com/EliraPendora?ref_src=twsrc%5Etfw">Tweets by EliraPendora</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
 
-    <img src="../../../../assets/finalproject/youtube.png" width="150px" alt="youtube" onclick="window.location.href='https://www.youtube.com/channel/UCIeSUTOTkF9Hs7q3SGcO-Ow';" class="sociallogo">
+    <img src="../../../assets/finalproject/youtube.png" width="150px" alt="youtube" onclick="window.location.href='https://www.youtube.com/channel/UCIeSUTOTkF9Hs7q3SGcO-Ow';" class="sociallogo">
 
   </div>
   <div class="categories">
