--- a/ninisani/worker/Selen/page.html
+++ b/ninisani/worker/Selen/page.html
@@ -54,7 +54,7 @@
 
   </div>
 
-  <img src="../../../../assets/finalproject/youtube.png" width="150px" alt="youtube" onclick="window.location.href='https://www.youtube.com/channel/UCV1xUwfM2v2oBtT3JNvic3w';" class="sociallogo">
+  <img src="../../../assets/finalproject/youtube.png" width="150px" alt="youtube" onclick="window.location.href='https://www.youtube.com/channel/UCV1xUwfM2v2oBtT3JNvic3w';" class="sociallogo">
 
 </div>
   <div class="categories">
@@ -90,7 +90,7 @@
           This is not a real site.<br>
            The talents exist the real company is called Nijisanji.<br>
             This is just a parody site if Ninisanni was a company composed of the talents of the original company.
-          
+
         </div>
     </div>
   </div>
