--- a/ninisani/worker/workers.html
+++ b/ninisani/worker/workers.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <title>
-    work
+    Workers
     </title>
     <meta charset="utf-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,29 +32,29 @@
     </div>
     <div class="vtuber">
 
-      <a href="./Elira/page.html" > <img src="../assets/image/Elira_Pendora.webp"class="worker"alt="Elira"> </a>
+      <a href="./Elira/page.html" > <img src="../assets/image/Elira_Pendora.png"class="worker"alt="Elira"> </a>
 
-      <a href="./Pomu/page.html" >  <img src="../assets/image/Pomu_Rainpuff.webp"class="worker" alt="Pomu"></a>
+      <a href="./Pomu/page.html" >  <img src="../assets/image/Pomu_Rainpuff.png"class="worker" alt="Pomu"></a>
 
-      <a href="./Finana/page.html" >  <img src="../assets/image/Finana_Ryugu.webp"class="worker" alt="Finana"></a>
+      <a href="./Finana/page.html" >  <img src="../assets/image/Finana_Ryugu.png"class="worker" alt="Finana"></a>
 
     </div>
     <div class="gen">
       Obsydia
     </div>
     <div class="vtuber">
-      <a href="./Selen/page.html" ><img src="../assets/image/Selen_Tatsuki.webp"class="worker" alt="Selen"></a>
-      <a href="./Rosemi/page.html" >  <img src="../assets/image/Rosemi_Lovelock.webp"class="worker" alt="Rosemi"></a>
-      <a href="./Petra/page.html" >  <img src="../assets/image/Petra_Gurin.webp"class="worker" alt="Petra"></a>
+      <a href="./Selen/page.html" ><img src="../assets/image/Selen_Tatsuki.png"class="worker" alt="Selen"></a>
+      <a href="./Rosemi/page.html" >  <img src="../assets/image/Rosemi_Lovelock.png"class="worker" alt="Rosemi"></a>
+      <a href="./Petra/page.html" >  <img src="../assets/image/Petra_Gurin.png"class="worker" alt="Petra"></a>
     </div>
     <div class="gen">
       Ethyria
     </div>
     <div class="vtuber">
-      <a href="./Enna/page.html" >  <img src="../assets/image/Enna_Alouette.webp"class="ethyria" alt="Enna"></a>
-      <a href="./Millie/page.html" > <img src="../assets/image/Millie_Parfait.webp"class="ethyria" alt="Millie"></a>
-      <a href="./Nina/page.html" > <img src="../assets/image/Nina_Kosaka.webp"class="ethyria" alt="Nina"></a>
-      <a href="./Reimu/page.html" > <img src="../assets/image/Reimu_Endou.webp"class="ethyria" alt="Reimu"></a>
+      <a href="./Enna/page.html" >  <img src="../assets/image/Enna_Alouette.png"class="ethyria" alt="Enna"></a>
+      <a href="./Millie/page.html" > <img src="../assets/image/Millie_Parfait.png"class="ethyria" alt="Millie"></a>
+      <a href="./Nina/page.html" > <img src="../assets/image/Nina_Kosaka.png"class="ethyria" alt="Nina"></a>
+      <a href="./Reimu/page.html" > <img src="../assets/image/Reimu_Endou.png"class="ethyria" alt="Reimu"></a>
     </div>
 
   </body>
