--- a/ninisani/home.html
+++ b/ninisani/home.html
@@ -53,7 +53,7 @@
       <div class="mySlides fade">
         <div class="numbertext">1 / 10</div>
         <a href="./worker/Elira/page.html">
-          <img src="./assets/image/Elira_Pendora.webp" style="width:100%">
+          <img src="./assets/image/Elira_Pendora.png" style="width:100%">
         </a>
        <div class="text">Elira Pendora</div>
       </div>
@@ -61,7 +61,7 @@
      <div class="mySlides fade">
        <div class="numbertext">2 / 10</div>
        <a href="./worker/Pomu/page.html">
-         <img src="./assets/image/Pomu_Rainpuff.webp" style="width:100%">
+         <img src="./assets/image/Pomu_Rainpuff.png" style="width:100%">
        </a>
        <div class="text">Pomu Rainpuff</div>
      </div>
@@ -69,7 +69,7 @@
      <div class="mySlides fade">
        <div class="numbertext">3 / 10</div>
        <a href="./worker/Finana/page.html">
-         <img src="./assets/image/Finana_Ryugu.webp" style="width:100%">
+         <img src="./assets/image/Finana_Ryugu.png" style="width:100%">
        </a>
        <div class="text">Finana Ryugu</div>
      </div>
@@ -77,7 +77,7 @@
      <div class="mySlides fade">
        <div class="numbertext">4 / 10</div>
        <a href="./worker/Selen/page.html">
-         <img src="./assets/image/Selen_Tatsuki.webp" style="width:100%">
+         <img src="./assets/image/Selen_Tatsuki.png" style="width:100%">
        </a>
        <div class="text">Selen Tatsuki</div>
      </div>
@@ -85,7 +85,7 @@
      <div class="mySlides fade">
        <div class="numbertext">5 / 10</div>
        <a href="./worker/Rosemi/page.html">
-         <img src="./assets/image/Rosemi_Lovelock.webp" style="width:100%">
+         <img src="./assets/image/Rosemi_Lovelock.png" style="width:100%">
        </a>
        <div class="text">Rosemi Lovelock</div>
      </div>
@@ -93,7 +93,7 @@
      <div class="mySlides fade">
        <div class="numbertext">6 / 10</div>
        <a href="./worker/Rosemi/page.html">
-         <img src="./assets/image/Petra_Gurin.webp" style="width:100%">
+         <img src="./assets/image/Petra_Gurin.png" style="width:100%">
       </a>
        <div class="text">Petra Gurin</div>
      </div>
@@ -101,7 +101,7 @@
      <div class="mySlides fade">
        <div class="numbertext">7 / 10</div>
        <a href="./worker/Enna/page.html">
-         <img src="./assets/image/Enna_Alouette.webp" style="width:100%">
+         <img src="./assets/image/Enna_Alouette.png" style="width:100%">
        </a>
        <div class="text">Enna Alouette</div>
      </div>
@@ -109,7 +109,7 @@
      <div class="mySlides fade">
        <div class="numbertext">8 / 10</div>
        <a href="./worker/Millie/page.html">
-         <img src="./assets/image/Millie_Parfait.webp" style="width:100%">
+         <img src="./assets/image/Millie_Parfait.png" style="width:100%">
        </a>
        <div class="text">Millie Parfait</div>
      </div>
@@ -117,7 +117,7 @@
      <div class="mySlides fade">
        <div class="numbertext">9 / 10</div>
        <a href="./worker/Nina/page.html">
-         <img src="./assets/image/Nina_Kosaka.webp" style="width:100%">
+         <img src="./assets/image/Nina_Kosaka.png" style="width:100%">
        </a>
        <div class="text">Nina Kosaka</div>
      </div>
@@ -125,7 +125,7 @@
      <div class="mySlides fade">
        <div class="numbertext">10 / 10</div>
        <a href="./worker/Reimu/page.html">
-         <img src="./assets/image/Reimu_Endou.webp" style="width:100%">
+         <img src="./assets/image/Reimu_Endou.png" style="width:100%">
        </a>
        <div class="text">Reimu Endou</div>
      </div>
