--- a/ninisani/worker/Millie/page.html
+++ b/ninisani/worker/Millie/page.html
@@ -53,7 +53,7 @@
   <a class="twitter-timeline" data-width="500" data-height="500" data-dnt="true" data-theme="dark" href="https://twitter.com/MillieParfait?ref_src=twsrc%5Etfw">Tweets by MillieParfait</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </div>
 
-  <img src="../../../../assets/finalproject/youtube.png" width="150px" alt="youtube" onclick="window.location.href='https://www.youtube.com/channel/UC47rNmkDcNgbOcM-2BwzJTQ';" class="sociallogo">
+  <img src="../../../assets/finalproject/youtube.png" width="150px" alt="youtube" onclick="window.location.href='https://www.youtube.com/channel/UC47rNmkDcNgbOcM-2BwzJTQ';" class="sociallogo">
 
 </div>
   <div class="categories">
@@ -88,7 +88,7 @@
           This is not a real site.<br>
            The talents exist the real company is called Nijisanji.<br>
             This is just a parody site if Ninisanni was a company composed of the talents of the original company.
-          
+
         </div>
     </div>
   </div>
