--- a/ninisani/worker/Reimu/page.html
+++ b/ninisani/worker/Reimu/page.html
@@ -53,7 +53,7 @@
 <a class="twitter-timeline" data-width="500" data-height="500" data-dnt="true" data-theme="dark" href="https://twitter.com/ReimuEndou?ref_src=twsrc%5Etfw">Tweets by ReimuEndou</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </div>
 
-  <img src="../../../../assets/finalproject/youtube.png" width="150px" alt="youtube" onclick="window.location.href='https://www.youtube.com/channel/UCBURM8S4LH7cRZ0Clea9RDA';" class="sociallogo">
+  <img src="../../../assets/finalproject/youtube.png" width="150px" alt="youtube" onclick="window.location.href='https://www.youtube.com/channel/UCBURM8S4LH7cRZ0Clea9RDA';" class="sociallogo">
 
 </div>
   <div class="categories">
@@ -88,7 +88,7 @@
           This is not a real site.<br>
            The talents exist the real company is called Nijisanji.<br>
             This is just a parody site if Ninisanni was a company composed of the talents of the original company.
-          
+
         </div>
     </div>
   </div>
